[package]
name    = "pages-native"
version = "1.0.0"
authors = [ "Gloria" ]
edition = "2021"

[lib]
path       = "Sources/module.rs"
crate-type = [ "cdylib" ]

[dependencies]
serde                = "1.0"
serde_json           = "1.0"
wasm-bindgen         = "0.2.63"
wasm-bindgen-futures = "0.4.34"

[dependencies.web-sys]
version  = "0.3"
features = [
    "console",
    "Document",
    "CssStyleDeclaration",
    "Element",
    "Headers",
    "HtmlElement",
    "HtmlAnchorElement",
    "HtmlImageElement",
    "HtmlTableElement",
    "HtmlTableCellElement",
    "HtmlTableRowElement",
    "Location",
    "Request",
    "RequestInit",
    "RequestMode",
    "Response",
    "Window"
]

[profile.release]
opt-level = "s"
